@@ -21,16 +21,17 @@ make.twosample.stat <- function(f) {
 #' Confidence interval for the two-sample difference in means
 #'
 #' Calculates the permutation-test based confidence interval for the difference in means.
+#' Works in both for univariate and multivariate cases.
 #'
-#' @param x Observations from sample 1
-#' @param y Observations from sample 2
-#' @param ... Additional arguments to \link{ciperm}
+#' @param x Observations from sample 1. A numeric vector of length N_1 or a matrix of dim N_1 x K.
+#' @param y Observations from sample 2. A numeric vector of length N_2 or a matrix of dim N_2 x K.
+#' @param ... Additional arguments to \link{ciperm} or \link{ciperm.multi}
 #'
 #' @details It is the confidence interval for mean(y) - mean(x)
 #'
-#' @return Vector of lower and upper ends of the confidence interval
+#' @return Vector or array of lower and upper ends of the confidence interval
 #'
-#' @seealso \link{ciperm}
+#' @seealso \link{ciperm},  \link{ciperm.multi}
 #'
 #' @examples
 #' x <- rnorm(20)
@@ -40,10 +41,15 @@ make.twosample.stat <- function(f) {
 #'
 ciperm.twosample <- function(x, y, ...) {
   ## Set up covariate function and test statistic
-  theta <- c(rep(0, length(x)), rep(1, length(y)))
+  theta <- c(rep(0, NROW(x)), rep(1, NROW(y)))
+
   f <- factor(theta)
   ff <- make.twosample.stat(f)
-  phif <- twosample.cov.function(x,y)
+  phif <- make.linear.cov.function(theta)
 
-  ciperm(c(x,y), phif, statistic = ff, bounds = c(min(y) - max(x), max(y) - min(x)), ...)
+  if (NCOL(y) == 1)
+    ciperm(c(x,y), phif, statistic = ff, bounds = c(min(y) - max(x), max(y) - min(x)), ...)
+
+  else ciperm.multi(rbind(x,y), phif, statistic = ff, bounds = c(min(y) - max(x), max(y) - min(x)), ...)
+
 }
